[package]
name = "microproc-tests"
version = "0.1.0"
edition = "2021"

[features]
proc-macro = ["microproc-tests-macros/proc-macro"]
proc-macro2 = ["microproc-tests-macros/proc-macro2"]
prefer-pm1 = ["proc-macro", "proc-macro2", "microproc-tests-macros/prefer-pm1"]

[dependencies]
microproc = { path = "../microproc" }
microproc-tests-macros = { path = "../microproc-tests-macros" }

[package.metadata.docs.rs]
all-features = true
