[package]
name = "microproc-tests"
version = "0.1.0"
edition = "2021"

[features]
proc-macro = ["microproc-test-macros/proc-macro"]
proc-macro2 = ["microproc-test-macros/proc-macro2"]
prefer-pm1 = ["proc-macro", "proc-macro2", "microproc-test-macros/prefer-pm1"]

[dependencies]
microproc = { path = "../microproc" }
microproc-test-macros = { path = "../microproc-test-macros" }

[package.metadata.docs.rs]
all-features = true
