[package]
name = "microproc"
version = "0.1.0"
edition = "2021"
authors = ["Maia S. R."]
license = "MIT OR Apache-2.0 OR Zlib"
description = "Make lightweight proc macros"
repository = "https://github.com/maia-s/microproc"
documentation = "https://docs.rs/microproc"
keywords = ["macros", "proc-macro", "lightweight"]
categories = ["parsing", "development-tools::procedural-macro-helpers"]

[features]
default = ["proc-macro", "all"]

all = ["literal-value", "op", "token-buffer"]
literal-value = []
op = []
token-buffer = []

proc-macro = []
proc-macro2 = ["dep:proc-macro2"]

[dependencies]
proc-macro2 = { version = "1.0", optional = true, default-features = false }

[package.metadata.docs.rs]
all-features = true
