[package]
name = "proclet-test-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[features]
proc-macro = ["proclet/proc-macro"]
proc-macro2 = ["proclet/proc-macro2", "dep:proc-macro2"]
prefer-pm1 = ["proc-macro", "proc-macro2"]

[dependencies]
proclet = { path = "../proclet", default-features = false, features = ["define-ops", "literal-value", "token-buffer"] }
proc-macro2 = { version = "1.0", optional = true }

[package.metadata.docs.rs]
all-features = true
