[package]
name = "proclet-tests"
version = "0.1.0"
edition = "2021"

[features]
proc-macro = ["proclet-test-macros/proc-macro"]
proc-macro2 = ["proclet-test-macros/proc-macro2"]
prefer-pm1 = ["proc-macro", "proc-macro2", "proclet-test-macros/prefer-pm1"]

[dependencies]
proclet = { path = "../proclet" }
proclet-test-macros = { path = "../proclet-test-macros" }

[package.metadata.docs.rs]
all-features = true
