[package]
name = "proclet-utils-macros"
version = "0.1.2"
edition = "2021"
authors = ["Maia S. R."]
license = "MIT OR Apache-2.0 OR Zlib"
description = "Proc macros for the proclet-utils crate"
repository = "https://codeberg.org/maia/proclet-rs"

[lib]
proc-macro = true

[dependencies]
proclet = { path = "../proclet", version = "0", default-features = false, features = ["proc-macro", "literal-value"] }
