[package]
name = "proclet-utils"
version = "0.1.5"
edition = "2021"
authors = ["Maia S. R."]
license = "MIT OR Apache-2.0 OR Zlib"
description = "Utilities for proclet"
repository = "https://github.com/maia-s/proclet"
documentation = "https://docs.rs/proclet-utils"
categories = ["parsing", "development-tools::procedural-macro-helpers"]

[dependencies]
proclet = { version = "0.1", default-features = false }
proclet-utils-macros = { path = "../proclet-utils-macros", version = "0.1" }
