[package]
name = "proclet-utils"
version = "0.3.0"
edition = "2021"
authors = ["Maia S. R."]
license = "MIT OR Apache-2.0 OR Zlib"
description = "Utilities for proclet"
repository = "https://codeberg.org/maia/proclet-rs"
documentation = "https://docs.rs/proclet-utils"
categories = ["parsing", "development-tools::procedural-macro-helpers"]

[dependencies]
proclet = { path = "../proclet", version = "0.3", default-features = false }
proclet-utils-macros = { path = "../proclet-utils-macros", version = "0.1" }
