[package]
name = "proclet"
version = "0.1.0"
edition = "2021"
authors = ["Maia S. R."]
license = "MIT OR Apache-2.0 OR Zlib"
description = "Make lightweight proc macros"
repository = "https://github.com/maia-s/proclet"
documentation = "https://docs.rs/proclet"
keywords = ["macros", "proc-macro", "lightweight"]
categories = ["parsing", "development-tools::procedural-macro-helpers"]

[features]
default = ["proc-macro", "all"]

all = ["literal-value"]
literal-value = []

proc-macro = ["proc-macro2?/proc-macro"]
proc-macro2 = ["dep:proc-macro2"]

[dependencies]
proc-macro2 = { version = "1.0", optional = true, default-features = false }

[package.metadata.docs.rs]
all-features = true
